# sfm

./: .gitignore  README.md  launch_jupyter_notebook.sh  pyproject.toml
build_scrach/: 3view_sfm.ipynb  Untitled.ipynb  conector.STL  g2o_practice.ipynb  my_pts2.ply  pnp_test.ipynb  points_and_camera_position_save_sample.ipynb  sfm.ipynb  sfm_openCV_build_scrach copy.ipynb  sfm_openCV_build_scrach.ipynb  test.ipynb  three_view_sfm_build_scrach copy.ipynb  tmp.json
build_scrach/.ipynb_checkpoints/: points_and_camera_position_save_sample-checkpoint.ipynb
build_scrach/g2o_practice_cpp/: CMakeLists.txt  circle_fit.cpp
build_scrach/g2o_practice_py/: g2o_practice_circle.ipynb  g2o_practice_eclipse.ipynb
build_scrach/package_practice/sqlite_practice/: Untitled.ipynb  sample.sqlite3
docker/: .env  Dockerfile  Dockerfile_tmp  at_con_doc.sh  docker-compose.yml
docker/app/: pyproject.toml
utils/: BA.py  feature_matcher.py  geometric_core.py  sfm.py  tmp.py  utils_3d.py
viewer/: db.sqlite3
viewer/manager/: settings.py
viewer/webgl/static/model/old/: camera2.ply  camera2_ba.ply  camera3_ba.ply  camera5_ba.ply  camera6_ba.ply  model_prop_new.ply  model_test.ply  model_test2.ply  model_test2_ba.ply  model_test3_ba.ply  model_test4_ba.ply  model_test5_ba.ply  model_test6_ba.ply
viewer/webgl/templates/: ply.html
