[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
opencv-python="^4.7.0.72"
opencv-contrib-python="^4.7.0.72"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"