[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.1"
pyntcloud ="^0.3.1"
opencv-python="^4.7.0.72"
opencv-contrib-python="^4.7.0.72"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
jupyterlab = "^3.6.3"
jupyter-contrib-nbextensions = "^0.7.0"
Django = "^4.2.1"
ipympl = "^0.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"